homepage buttons z-index fixed, new category is still WIP

--- a/client/src/styles/NewCategory.css
+++ b/client/src/styles/NewCategory.css
@@ -78,3 +78,7 @@
 .inputMaterial:focus ~ .highlight {
   animation:inputHighlighter 0.3s ease;
 }
+
+.new_category {
+  z-index: -1;
+}
